language/move-model/tests/sources/pack_err.exp
error: unexpected token
  ┌─ tests/sources/pack_err.move:9:20
  │
9 │     invariant pack sum = sum + x;
  │                    ^^^
  │                    │
  │                    Unexpected 'sum'
  │                    Expected ';'
